fix button height and text overflow

--- a/src/Blocks-Elements-Modificators/Button.css
+++ b/src/Blocks-Elements-Modificators/Button.css
@@ -28,13 +28,13 @@
 }
 
 .Button_size_m {
-    height: 36px;
+    min-height: 36px;
     padding-left: 20px;
     padding-right: 20px;   
 }
 
 .Button_size_s {
-    height: 28px;
+    min-height: 28px;
     padding-right: 13px;
     padding-left: 8px;
 }
@@ -46,13 +46,13 @@
 }
 
 .Button_size_xs {
-    height: 28px;
+    min-height: 28px;
     padding-left: 8px;
     padding-right: 8px;
 }
 
 .Button_size_mixSM {
-    height: 28px;
+    min-height: 28px;
     padding-left: 13px;
     padding-right: 13px;
     margin-top: 8px;
@@ -60,7 +60,7 @@
 
 @media (max-width: 360px) {
     .Button_size_mixSM {
-        height: 36px;
+        min-height: 36px;
         padding-left: 20px;
         padding-right: 20px;
         width: 100%;
@@ -99,6 +99,8 @@
     margin-left: 6px;
     display: flex;
     align-items: center;
+    word-break: break-all;
+    max-width: 100px;
 }
 
 @media (max-width: 360px) {
